# argo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  docker-compose.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: changelog.yml  ci.yml  docker.yml  publish.yml  release.yml
crates/argo-cli/: Cargo.toml
crates/argo-cli/src/: main.rs
crates/argo-cli/src/commands/: eval.rs  init.rs  inspect.rs  loop_cmd.rs  mcp.rs  memory.rs  mod.rs  package.rs  run.rs  stats.rs  tools.rs  validate.rs
crates/argo-cli/tests/: full_agent_test.rs
crates/argo-core/: Cargo.toml
crates/argo-core/src/: actor.rs  config.rs  error.rs  execution.rs  lib.rs  llm.rs  loop_agent.rs  message.rs  orchestrator.rs  pool.rs  spawn.rs  tests.rs
crates/argo-core/src/llm/: anthropic.rs  mod.rs  openai.rs
crates/argo-heal/: Cargo.toml
crates/argo-heal/src/: classifier.rs  engine.rs  lib.rs  postmortem.rs  types.rs
crates/argo-heal/src/growth/: engine.rs  mod.rs  pattern.rs  proposal.rs  types.rs
crates/argo-heal/src/strategy/: change_provider.rs  decompose.rs  mod.rs  reduce_scope.rs  reframe.rs  retry.rs  spawn_subagent.rs  swap_tool.rs
crates/argo-mcp/: Cargo.toml
crates/argo-mcp/src/: auth.rs  connector.rs  error.rs  lib.rs  types.rs
crates/argo-memory/: Cargo.toml
crates/argo-memory/src/: embedding.rs  error.rs  handle.rs  lib.rs  overflow.rs  qdrant.rs  redis.rs  retrieval.rs  surreal.rs  tests.rs
crates/argo-napi/: Cargo.toml  build.rs  package.json
crates/argo-napi/src/: agent.rs  config.rs  lib.rs  pool.rs  util.rs
crates/argo-observe/: Cargo.toml
crates/argo-observe/src/: lib.rs  tracing.rs
crates/argo-py/: Cargo.toml  pyproject.toml
crates/argo-py/src/: agent.rs  config.rs  lib.rs  memory.rs  pool.rs  util.rs
crates/argo-tools/: Cargo.toml
crates/argo-tools/src/: bash.rs  browser.rs  code.rs  error.rs  files.rs  git_tool.rs  http.rs  lib.rs  python_tool.rs  registry.rs  tests.rs  trait_def.rs  web_search.rs
deploy/: Dockerfile  docker-compose.prod.yml
deploy/k8s/: configmap.yaml  deployment.yaml  namespace.yaml  qdrant.yaml  redis.yaml  secret.yaml  surrealdb.yaml
docs/: ROADMAP.md  argo-implementation-plan.md  argo-master-plan.md
docs/compose/plans/: 2026-06-27-phase-0-planning.md  2026-06-27-phase-1-rust-core.md  2026-06-27-phase-2-heal-memory.md
docs/rfcs/architecture/: A-01-actor-engine.md  A-02-memory-architecture.md  A-03-error-taxonomy.md  A-04-heal-strategy.md  A-05-llm-provider-trait.md  A-06-tool-trait-registry.md  A-07-mcp-connector.md  A-08-multi-agent-protocol.md  A-09-self-improvement.md  A-10-loop-agent-scoring.md  A-11-observability-contract.md  A-12-security-model.md
docs/rfcs/guides/: F-05-decision-log.md  RFC-REVIEW-PROCESS.md
docs/rfcs/schemas/: B-01-surrealdb-schema.md  B-02-redis-key-schema.md  B-03-qdrant-collection-schema.md  B-04-agent-config-toml-schema.md  B-05-messagepack-message-catalog.md  B-06-otel-semantic-conventions.md
examples/coding-agent/: README.md  agent.toml
examples/coding-agent/evals/: coding-fibonacci.toml
examples/data-analyst/: README.md  agent.toml
examples/data-analyst/evals/: data-summary.toml
examples/research-agent/: README.md  agent.toml
examples/research-agent/evals/: research-comparison.toml
scripts/: publish.sh
tests/: integration_test.rs
