[package]
name = "argo-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core actor engine, message types, and agent execution for Argo"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait = "0.1"
