[package]
name = "argo-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core actor engine, message types, and agent execution for Argo"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
rmp-serde.workspace = true
reqwest.workspace = true
futures.workspace = true
toml.workspace = true
semver.workspace = true
