[package]
name = "argo-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP protocol connector for Argo"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
