[package]
name = "argo-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Memory system for Argo: Redis, SurrealDB, and Qdrant layers"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
async-trait = "0.1"
