[package]
name = "argo-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Memory system for Argo: Redis, SurrealDB, and Qdrant layers"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
surrealdb = "2"
