[package]
name = "argo-py"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python SDK for Argo Agent Framework (via PyO3)"

[lib]
name = "argo_agents"
crate-type = ["cdylib"]

[dependencies]
argo-core = { path = "../argo-core" }
argo-memory = { path = "../argo-memory" }
argo-tools = { path = "../argo-tools" }
argo-heal = { path = "../argo-heal" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true

[dependencies.pyo3]
version = "0.23"
features = ["extension-module"]
