[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "argo-framework"
dynamic = ["version"]
description = "The first agent framework where agents genuinely get better over time"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/argo-agents/argo"
Documentation = "https://docs.argo-agents.dev"
Repository = "https://github.com/argo-agents/argo"
Issues = "https://github.com/argo-agents/argo/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "argo_agents"
